; ModuleID = '/home/carl/AnghaBench/libuv/test/extr_test-ipc-send-recv.c_send_recv_start.c'
source_filename = "/home/carl/AnghaBench/libuv/test/extr_test-ipc-send-recv.c_send_recv_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@ctx2 = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@alloc_cb = common dso_local global i32 0, align 4
@read_cb = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @send_recv_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @send_recv_start() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 @uv_is_readable(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @ctx2, i32 0, i32 0))
  %3 = icmp eq i32 1, %2
  %4 = zext i1 %3 to i32
  %5 = call i32 @ASSERT(i32 %4)
  %6 = call i32 @uv_is_writable(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @ctx2, i32 0, i32 0))
  %7 = icmp eq i32 1, %6
  %8 = zext i1 %7 to i32
  %9 = call i32 @ASSERT(i32 %8)
  %10 = call i64 @uv_is_closing(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @ctx2, i32 0, i32 0))
  %11 = icmp eq i64 0, %10
  %12 = zext i1 %11 to i32
  %13 = call i32 @ASSERT(i32 %12)
  %14 = load i32, i32* @alloc_cb, align 4
  %15 = load i32, i32* @read_cb, align 4
  %16 = call i32 @uv_read_start(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @ctx2, i32 0, i32 0), i32 %14, i32 %15)
  store i32 %16, i32* %1, align 4
  %17 = load i32, i32* %1, align 4
  %18 = icmp eq i32 %17, 0
  %19 = zext i1 %18 to i32
  %20 = call i32 @ASSERT(i32 %19)
  ret void
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @uv_is_readable(i32*) #1

declare dso_local i32 @uv_is_writable(i32*) #1

declare dso_local i64 @uv_is_closing(i32*) #1

declare dso_local i32 @uv_read_start(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
